--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "MR Blogs"
 author: "Majed Refaea"
-description: "WritUp" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "WriteUp" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
