--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ hackerone_username: "dmc3"
 #########################################################################################
 ######### Nothing below needs to be changed (unless you know what you're doing) #########
 #########################################################################################
-theme: jekyll-theme-architect
+theme: jekyll-theme-slate
 
 rss: rss
 
